--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,3 +56,8 @@ path = "src/lib.rs"
 
 [profile.release]
 lto = true
+
+[features]
+default = ["spawn_controlplane", "spawn_dataplane"]
+spawn_controlplane = []
+spawn_dataplane = []
