--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       run: |
         . ~/.cargo/env && 
         cd $GITHUB_WORKSPACE &&
-        cargo audit
+        cargo audit --ignore RUSTSEC-2020-0159 --ignore RUSTSEC-2020-0071
       shell: bash
     - name: cargo clippy
       run: |
