--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ uuid = { version = "0.8", features = ["v4", "serde"] }
 serde = "1.0"
 serde_json = "1.0"
 chashmap = "2.2"
+tempfile = "3.1.0"
 arc-swap = "0.4"
 futures = "0.3"
 base64 = "0.13"
