--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,6 @@ uuid = { version = "0.8", features = ["v4", "serde"] }
 serde = "1.0"
 serde_json = "1.0"
 chashmap = "2.2"
-tempfile = "3.1.0"
 arc-swap = "0.4"
 futures = "0.3"
 base64 = "0.13"
@@ -48,6 +47,9 @@ serde_yaml = "0.8"
 hyper = "0.14"
 zeroize = { version = "1.3", features = ["zeroize_derive"] }
 ring = { version = "0.16", features = ["std"] }
+
+[dev-dependencies]
+tempfile = "3.1.0"
 
 [build-dependencies]
 tonic-build = "0.5"
