--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,10 @@ jobs:
         --ignore RUSTSEC-2020-0071 \
         # [brotli-sys] Integer overflow in the bundled Brotli C library
         --ignore RUSTSEC-2021-0131
+        # [net2] `net2` crate has been deprecated; use `socket2` instead
+        --ignore RUSTSEC-2020-0016
+        # [stdweb] stdweb is unmaintained
+        --ignore RUSTSEC-2020-0056
       shell: bash
     - name: cargo clippy
       run: |
