--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ arc-swap = "0.4"
 futures = "0.3"
 base64 = "0.13"
 actix-rt = "2.3.0"
-actix-web = { version = "=4.1", features = ["rustls"] }
+actix-web = { version = "=4.0.0-beta.9", features = ["rustls"] }
 actix-service = "2.0.0"
 actix-tls = "=3.0.0-beta.5"
 regex = "1.4"
