Add dynamic_config test for new function (#20)
* Add dynamic_config test for new function

* Move tempfile dep to dev-dependencies

* Remove Cargo.lock, and add Cargo.lock to .gitignore

* Use should_panic for testing invalid config

* Remove debug statement

* rename r to _ to suppress warnning

* Ignore error: RUSTSEC-2021-0131

* Ignore warnings from cargo audit too

* fix: ignore two more audit errors

* fix: revert actix-web dep change

* fix: fix build by using fixed version of actix_router and spire-workload

Co-authored-by: Nicholas <nicholas.zhao@bytedance.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,10 @@ jobs:
       run: |
         . ~/.cargo/env && 
         cd $GITHUB_WORKSPACE &&
-        cargo audit --ignore RUSTSEC-2020-0159 --ignore RUSTSEC-2020-0071
+        cargo audit --ignore RUSTSEC-2020-0159 --ignore RUSTSEC-2020-0071 \
+        --ignore RUSTSEC-2021-0131 --ignore RUSTSEC-2020-0016 \
+        --ignore RUSTSEC-2020-0056 --ignore RUSTSEC-2022-0013 \
+        --ignore RUSTSEC-2022-0014
       shell: bash
     - name: cargo clippy
       run: |
